# auto-booker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: basic.yml
src/: booker.py  captcha.py  config.py  locator.py  main.py  selenium_service.py
