[tool.poetry]
name = "auto-booker"
version = "0.1.0"
description = ""
authors = ["BOSHAU CHEN <b97390022@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_booker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
loguru = "^0.7.0"
pydantic = "2.0"
schedule = "^1.2.0"
pytz = "^2023.3"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
